--- a/_config.yml
+++ b/_config.yml
@@ -8,69 +8,70 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Megan Cui"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Megan Cui"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : megancui.com
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : #
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "profile.jpg"
+  name             : "Megan Cui"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Cambridge, MA"
+  location         : # "Cambridge, MA"
+  employer         : # "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "megancui[@at]college.harvard.edu" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  arxiv            : #
+  googlescholar    : #
+  impactstory      : #
+  orcid            : #
+  pubmed           : #
+  researchgate     : #
 
   # Repositories and software development
-  bitbucket        : # Username - Update with your username on the site
-  codepen          : # Username
-  dribbble         : # Username
-  github           : "academicpages"
-  kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  bitbucket        : # 
+  codepen          : # 
+  dribbble         : # 
+  github           : # "megancui"
+  kaggle           : #   
+  stackoverflow    : #  
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
-  facebook         : # Username
-  flickr           : # Username
-  foursquare       : # Username
-  goodreads        : # Username
-  google_plus      : # Username
-  keybase          : # Username
-  instagram        : # Username
-  lastfm           : # Username
-  linkedin         : # Username
-  mastodon         : # URL
-  medium           : # URL
-  pinterest        : # Username
-  soundcloud       : # Username
-  steam            : # Username
-  telegram         : # URL
-  tumblr           : # Username
-  twitter          : # Username for X / Twitter
-  vine             : # Username
-  weibo            : # Username
-  wikipedia        : # Username
-  xing             : # Username
-  youtube          : # Username
-  zhihu            : # URL
+  bluesky          : #
+  facebook         : # 
+  flickr           : # 
+  foursquare       : # 
+  goodreads        : # 
+  google_plus      : # 
+  keybase          : # 
+  instagram        : # 
+  lastfm           : # 
+  linkedin         : # 
+  mastodon         : # 
+  medium           : # 
+  pinterest        : # 
+  soundcloud       : # 
+  steam            : # 
+  substack         : "https://megancui.substack.com/"
+  telegram         : # 
+  tumblr           : # 
+  twitter          : # 
+  vine             : # 
+  weibo            : # 
+  wikipedia        : # 
+  xing             : # 
+  youtube          : # 
+  zhihu            : # 
 
 
 # Site Settings
