--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "jquery": "^3.7.1"
   },
   "devDependencies": {
