--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "Megan Cui"
 description              : &description "personal description"
 url                      : megancui.com
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : # "" # the subpath of your site, e.g. "/blog"
 repository               : #
 
 # Site Author - The following control what appear as part of the author content on the side bar.
