--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "Megan Cui"
 description              : &description "personal description"
 url                      : "megancui.com"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : #
+repository               : "megancui/pw" #
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
